#9 fix safari broken ui

--- a/styles/components/signup.scss
+++ b/styles/components/signup.scss
@@ -1,7 +1,7 @@
 .sign-page {
   display: flex;
   min-height: 100%;
-  max-height: 100%;
+  // max-height: 100%;
   justify-content: center;
   align-items: center;
 }
@@ -35,14 +35,15 @@
   // background-color: color("white");
   flex-direction: column;
   gap: 10px;
-  padding: 16px 24px;
+  padding: 24px 24px;
   box-sizing: border-box;
   align-items: center;
+  // overflow: scroll;
   & > .sign {
     &__title {
       @include typeface("Heading_1");
       font-weight: 800;
-      margin-bottom: 32px;
+      // margin-bottom: 16px;
       align-self: flex-start;
     }
 
